<resources>
    <string name="app_name">Complex</string>
    <string name="real">real</string>
    <string name="imag">imag</string>
    <string name="abs">abs</string>
    <string name="deg">deg</string>
    <string name="rad">rad</string>
    <string name="rad_div_pi">rad/π</string>
    <string name="formula">"a little strange formula\nhelp ->"</string>
    <string name="formula_dialog">"a little strange formula"</string>

    <string name="real_imag">real/imag</string>
    <string name="abs_deg">abs/deg</string>
    <string name="abs_rad">abs/rad</string>
    <string name="abs_rad_pi">abs/(rad/π)π</string>
    <string name="code">calculate</string>

    <string name="angle_char" translatable="false">∠</string>
    <string name="plus_i" translatable="false">+ i</string>
    <string name="pi_char" translatable="false">π</string>
    <string name="calculate">Calculate</string>

    <string name="real_part">REAL PART</string>
    <string name="imag_part">IMAGINARY PART</string>
    <string name="abs_value">ABSOLUTE</string>
    <string name="angle_in_deg">ANGLE IN DEGREES</string>
    <string name="angle_in_rad">ANGLE IN RADIANS</string>
    <string name="angle_in_rad_div_pi">ANGLE IN RADIANS DIVIDED BY PI</string>
    <string name="sin">SINE</string>
    <string name="cos">COSINE</string>
    <string name="tan">TANGENT</string>

    <string name="error">ERROR</string>
    <string name="menu_look_code">Look at source code</string>
    <string name="help">help</string>
    <string name="type_complex">type complex</string>
    <string name="ok">OK</string>
</resources>
