<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/abs"
        android:inputType="numberDecimal"
        android:layout_weight="1"
        android:hint="@string/abs"
        android:gravity="right|center"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/angle_char"
        android:gravity="center"
        android:textSize="45dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/rad"
        android:inputType="numberDecimal"
        android:layout_weight="1"
        android:hint="@string/rad"
        android:gravity="left|center"
        android:textSize="30dp"/>
</LinearLayout>